Add project documentation and repository setup
- Add README with features, installation, and usage docs
- Add MIT LICENSE
- Add CHANGELOG, CONTRIBUTING, CODE_OF_CONDUCT, SECURITY docs
- Add GitHub issue templates and PR template
- Add GitHub Actions workflow
- Update package.json with keywords, repository, homepage
- Expand .gitignore for common dev files
- Update .eslintignore to exclude config files

--- a/.gitignore
+++ b/.gitignore
@@ -93,3 +93,62 @@ out/
 
 # Downloaded spectrum-css repo
 spectrum-css/
+
+# IDE and editors
+.idea/
+*.swp
+*.swo
+*~
+.project
+.classpath
+.c9/
+*.launch
+.settings/
+*.sublime-workspace
+*.sublime-project
+
+# VS Code (allow workspace settings for consistency)
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+
+# Environment files
+.env.local
+.env.development
+.env.production
+.env*.local
+
+# Debug logs
+*.log
+debug.log*
+
+# Testing
+coverage/
+.nyc_output/
+
+# Temporary files
+tmp/
+temp/
+*.tmp
+*.temp
+
+# Build artifacts
+dist/
+build/
+*.asar
+
+# Package manager locks (keep package-lock.json for reproducibility)
+yarn.lock
+pnpm-lock.yaml
+
+# OS generated files
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+$RECYCLE.BIN/
+*.lnk
+
+# Claude Code
+.claude/settings.local.json
