--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "turbopuffer-gui",
   "productName": "Turbopuffer GUI",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Desktop client for Turbopuffer vector database",
   "main": ".vite/build/main.js",
   "scripts": {
@@ -41,12 +41,14 @@
   "devDependencies": {
     "@electron-forge/cli": "^7.8.1",
     "@electron-forge/maker-deb": "^7.8.1",
+    "@electron-forge/maker-dmg": "^7.10.2",
     "@electron-forge/maker-rpm": "^7.8.1",
     "@electron-forge/maker-squirrel": "^7.8.1",
     "@electron-forge/maker-zip": "^7.8.1",
     "@electron-forge/plugin-auto-unpack-natives": "^7.8.1",
     "@electron-forge/plugin-fuses": "^7.8.1",
     "@electron-forge/plugin-vite": "^7.8.1",
+    "@electron-forge/publisher-github": "^7.10.2",
     "@electron/fuses": "^1.8.0",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.1",
